--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -7,19 +7,19 @@ server:
 spring:
   profiles: dev #开发环境
   application:
-    name: microservicecloud-config-client
+    name: config-client
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://eureka1:8761/eureka/,http://eureka2:8761/eureka
 ---
 server:
   port: 8202
 spring:
   profiles: test #测试环境
   application:
-    name: microservicecloud-config-client
+    name: config-client
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://eureka1:8761/eureka/,http://eureka2:8761/eureka
