--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -7,7 +7,7 @@ server:
 spring:
   profiles: dev #开发环境
   application:
-    name: config-client
+    name: microservicecloud-config-client
 eureka:
   client:
     service-url:
@@ -18,7 +18,7 @@ server:
 spring:
   profiles: test #测试环境
   application:
-    name: config-client
+    name: microservicecloud-config-client
 eureka:
   client:
     service-url:
