--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -5,7 +5,7 @@ spring:
 server:
   port: 8201
 spring:
-  profiles: dev #开发环境
+  profiles: dev
   application:
     name: microservicecloud-config-client
 eureka:
@@ -16,7 +16,7 @@ eureka:
 server:
   port: 8202
 spring:
-  profiles: test #测试环境
+  profiles: test
   application:
     name: microservicecloud-config-client
 eureka:
